# CoFrame

./: .babelrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO_NOTES.txt  UR_SIM_NOTES.md  craco.config.js  docker-compose.yml  index.html  package-lock.json  package.json  publish.js  vite-test.config.js  vite.config.js  webpack.config.js
archive/evd_ros_backend/: .gitignore
assets/: Human-98e4e279.glb  UW.b1d6d439.glb  coframe_rust_bg.wasm  index-976608ba.css  index.b82eee51.css  lively_bg-0de30277.wasm  lively_bg-7feea1d6.wasm  planner-worker.280c03df.js  planner-worker.d1eb0970.js  robotConfig-1af3e352.js
authoring_app/: README.md  package-lock.json  package.json
authoring_app/public/: index.html  manifest.json
authoring_app/src/: index.css  index.js  store.js
cobots/: CMakeLists.txt  package.xml
cobots_core/: CMakeLists.txt  README.md  package.xml
cobots_core/action/: Grip.action  MoveTrajectory.action
cobots_core/description/: robot.xacro
cobots_core/launch/: app.launch  debug_task.launch  main.launch  robot.launch  robot_bringup.launch  robot_bringup_old_driver.launch  test_robot_bringup.launch  ur3e.launch
cobots_core/markers/: SimpleGripperPhycon.stl
cobots_core/msg/: Grip.msg  Move.msg  (+4 more)
cobots_tasks/: CMakeLists.txt  README.md  package.xml
cobots_ur_bringup/: CMakeLists.txt  README.md  package.xml
cobots_ur_bringup_old_driver/: CMakeLists.txt  README.md  package.xml
coframe-rust/: Cargo.toml
coframe-rust/src/: lib.rs  main.rs  ur5e.urdf
coframe-rust/src/compiler/: utils.rs
docs/: 718.js  732.js  asset-manifest.json  index.html  main.js.LICENSE.txt
evd_authoring_app/: .eslintrc.js  LICENSE  blockly-library.xml  package-lock.json  package.json
evd_hololens_app/: DEVELOPER-NOTES.md  README.md
evd_ros_backend/: LICENSE  README.md
evd_unity_sim_app/: .gitignore  LICENSE  README.md
hololens_app/: README.md
public/: index.html  manifest.json
ros_backend/: README.md
src/: App.css  App.jsx  frameStyles.js  index.css  index.js  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
tasks/: CMakeLists.txt  package.xml
test/: index.html  issues.test.js  main.js
ur_support/: CMakeLists.txt  README.md  package.xml  ur3e_robotiq85.urdf
(+1916 files in other folders)
